CAAERS-6170: Layout issue was fixed
SVN-Revision: 17536

--- a/caAERS/software/web/src/main/webapp/css/common.css
+++ b/caAERS/software/web/src/main/webapp/css/common.css
@@ -1091,7 +1091,7 @@ img.indicator {
 
 .accordion-content .applicable-reports {
      border-bottom: 1px solid #CCCCCC;
-     margin-top: 5px;
+     margin-top: 40px;
 }
 
 .accordion-content .tablecontent th {
